# cogito

./: README.md  pyproject.toml
cogito/: __init__.py  __main__.py
cogito-main/cogito-main/: LICENSE
cogito-main/cogito-main/cogito/autonomy/: __init__.py  wallet.py
cogito-main/cogito-main/cogito/consciousness/: __init__.py  mapping.py  metrics.py  probes.py
cogito-main/cogito-main/cogito/core/: agent.py  memory.py  reasoning.py
cogito-main/cogito-main/cogito/eval/: benchmarks.py  dimensions.py
cogito-main/cogito-main/cogito/providers/: __init__.py  anthropic.py  base.py  local.py
cogito/api/: routes.py  server.py
cogito/autonomy/: agent.py  payments.py  services.py
cogito/config/: settings.py
cogito/eval/: __init__.py  runner.py  scoring.py
cogito/providers/: grok.py  openai.py
cogito/visualization/: radar.py
config/: cogito.toml
